--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite-pool": "^0.1.2",
+    "cron-job-manager": "^2.1.1",
     "discord.js": "^11.4.2",
     "enmap": "^4.3.3",
     "node-cron": "^2.0.3",
-    "sqlite": "^3.0.0"
+    "sqlite": "^3.0.0",
+    "time": "^0.12.0"
   }
 }
