--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "slimebotpublic.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "forever start slimebotpublic.js",
+    "stop": "forever stop slimebotpublic.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,12 @@
     "cron-job-manager": "^2.1.1",
     "discord.js": "^11.4.2",
     "enmap": "^4.3.3",
+    "forever": "^0.15.3",
     "node-cron": "^2.0.3",
     "sqlite": "^3.0.0",
     "time": "^0.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
