--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite-pool": "^0.1.2",
     "cron-job-manager": "^2.1.1",
     "discord.js": "^11.4.2",
+    "dotenv": "^6.2.0",
     "enmap": "^4.3.3",
     "forever": "^0.15.3",
     "node-cron": "^2.0.3",
