--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "forever start app.js",
     "stop": "forever stop app.js",
+    "restart": "npm stop && npm start",
     "nodemon": "nodemon app.js"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "better-sqlite-pool": "^0.1.2",
     "cron-job-manager": "^2.1.1",
     "discord.js": "^11.4.2",
+    "discord.js-commando": "^0.10.0",
     "dotenv": "^6.2.0",
     "enmap": "^4.3.3",
     "forever": "^0.15.3",
