--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite-pool": "^0.1.2",
+    "cron": "^1.7.0",
     "cron-job-manager": "^2.1.1",
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
