--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "forever": "^0.15.3",
     "node-cron": "^2.0.3",
     "sqlite": "^3.0.0",
-    "time": "^0.12.0"
+    "time": "^0.12.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
